// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Multilingual Logo > renders a logo component in a multilingual site language root 1`] = `
<a
  aria-label="Home"
  href="/en"
  onClick={[Function]}
>
  <img
    alt="Logo of Plone Site"
    className="ui image"
    src="/src/components/theme/Logo/Logo.svg"
  />
</a>
`;

exports[`Multilingual Logo > renders a logo component in a multilingual site root 1`] = `
<a
  aria-label="Home"
  href="/en"
  onClick={[Function]}
>
  <img
    alt="Logo of Plone Site"
    className="ui image"
    src="/src/components/theme/Logo/Logo.svg"
  />
</a>
`;

exports[`Multilingual Logo > renders a logo component with a custom logo in a non-root url 1`] = `
<a
  aria-label="Home"
  href="/en"
  onClick={[Function]}
>
  <img
    alt="Logo of Plone Site"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
  />
</a>
`;

exports[`Multilingual Logo > renders a logo component with a custom logo in a non-root url with path 1`] = `
<a
  aria-label="Home"
  href="/en"
  onClick={[Function]}
>
  <img
    alt="Logo of Plone Site"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
  />
</a>
`;
